--- a/AplikacjaAndroid/Controls/PasswordEntry/PasswordEntry.xaml
+++ b/AplikacjaAndroid/Controls/PasswordEntry/PasswordEntry.xaml
@@ -13,7 +13,7 @@
                Text="{Binding Text, Source={RelativeSource AncestorType={x:Type local:PasswordEntry}}, Mode=TwoWay}"
                IsPassword="{Binding IsPasswordHidden, Source={RelativeSource AncestorType={x:Type local:PasswordEntry}}}"
                Placeholder="{Binding Placeholder, Source={RelativeSource AncestorType={x:Type local:PasswordEntry}}}"
-               FontSize="17"
+               FontSize="{Binding FontSize, Source={RelativeSource AncestorType={x:Type local:PasswordEntry}}}"
                ClearButtonVisibility="WhileEditing"
                BackgroundColor="Transparent"
                Focused="OnEntryFocused"
