--- a/AplikacjaAndroid/Modules/Login/LoginView.xaml
+++ b/AplikacjaAndroid/Modules/Login/LoginView.xaml
@@ -174,6 +174,7 @@
 
                 <vm:PasswordEntry Text="{Binding RegisterUser.Password}"
                       Placeholder="Password"
+                      FontSize="17"
                       Grid.Column="1"
                       Grid.Row="1"/>
 
@@ -189,6 +190,7 @@
                 <vm:PasswordEntry Text="{Binding RegisterUser.ConfirmPassword}"
                                   Placeholder="Password"
                                   Grid.Column="1"
+                                  FontSize="17"
                                   Grid.Row="2"/>
             </Grid>
 
